--- a/SI/index.html
+++ b/SI/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8"/>
-	<title>Js Tutorials</title>
-	<link rel="stylesheet" type="text/css" href="style.css">	
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Js Tutorials</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
 
-<body>
-	<div id="header">
-	<h1>Welcome to JS Tutorials</h1>
-	<p>by Rajat Pokhrel</p>
-	</div>
+  <body>
+    <div id="wrapper">
+      <div id="header">
+        <h1>Welcome to JS Tutorials</h1>
+        <p>by Rajat Pokhrel</p>
+      </div>
 
-	<div id="simpleInterest">
-	<h4>Principal:</h4>
-	<input type="number" id="p">
-	
-	<h4>Rate</h4>
-	<input type="number" id="r">
-	
+      <div id="simpleInterest">
+        <h4>Principal:</h4>
+        <input type="number" id="p" />
 
-	<h4>Time:</h4> 	<select name="timeName" id="timeId" onchange="timeFunction()">
-						<option value="month">Month</option>
-						<option value="year">Year</option>
-					</select>
-					<p id="option"></p>
-	<br>
-	<input type="number" id="t">
-	<br><br><br>
+        <h4>Rate</h4>
+        <input type="number" id="r" />
 
-	<button onclick="interest()">Calculate Interest</button>
-	<h3 id="info"></h3>
-	</div>
+        <h4>Time:</h4>
+        <select name="timeName" id="timeId" onchange="timeFunction()">
+          <option value="month">Month</option>
+          <option value="year">Year</option>
+        </select>
+        <p id="option"></p>
+        <br />
+        <input type="number" id="t" />
+        <br /><br /><br />
 
-
-
-</body>
-<script type="text/javascript" src="script.js">	</script>
+        <button onclick="interest()">Calculate Interest</button>
+        <h3 id="info"></h3>
+      </div>
+    </div>
+  </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
